--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "hubot-rules": "^0.1.0",
     "hubot-scripts": "^2.5.16",
     "hubot-shipit": "^0.1.2",
-    "hubot-youtube": "^0.1.2"
+    "hubot-youtube": "^0.1.2",
+    "htmlparser": "1.8.0",
+    "soupselect": "0.2.0",
+    "validator" : "0.4.20"
   },
   "engines": {
     "node": "0.10.x"
